force-app/main/default/objects/Car__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Explorer</fullName>
            </value>
            <value>
                <fullName>Focus</fullName>
            </value>
            <value>
                <fullName>Camaro</fullName>
            </value>
            <value>
                <fullName>Impala</fullName>
            </value>
            <value>
                <fullName>Civic</fullName>
            </value>
            <value>
                <fullName>Accord</fullName>
            </value>
            <value>
                <fullName>Rav4</fullName>
            </value>
            <value>
                <fullName>Sienna</fullName>
            </value>
            <value>
                <fullName>Optima</fullName>
            </value>
            <value>
                <fullName>Telluride</fullName>
            </value>
            <value>
                <fullName>IS</fullName>
            </value>
            <value>
                <fullName>Lx</fullName>
            </value>
            <value>
                <fullName>CR-V</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>