force-app/main/default/objects/Car__c/validationRules/Year_is_numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Year_is_numeric</fullName>
    <active>true</active>
    <errorConditionFormula>IF ( !ISNUMBER( Year__c ) , True, False)</errorConditionFormula>
    <errorDisplayField>Year__c</errorDisplayField>
    <errorMessage>The Year must be a number</errorMessage>
</ValidationRule>